fix: label bcg bug on ios

--- a/css/style.css
+++ b/css/style.css
@@ -3159,6 +3159,9 @@ img {
      -moz-user-select: none;
           user-select: none;
 }
+.profile-notifications__label:active {
+  background-color: transparent;
+}
 .profile-notifications__item-header {
   font-size: 16px;
   font-weight: 500;
